--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Portfolio
 description: Nate Sepich's Portfolio
-remote_theme: pages-themes/midnight@v0.2.0
+# remote_theme: pages-themes/midnight@v0.2.0  # Commented out to allow custom styling
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-remote-theme
 exclude:
   - README.md
